feat(app): Add card effect carousel to Sourcing page

--- a/src/components/layout/HeroBanner.astro
+++ b/src/components/layout/HeroBanner.astro
@@ -59,10 +59,11 @@ const { src: backgroundImageWebp } = await getImage({
   }
 
   .banner p {
-    max-width: 500px;
+    max-width: 600px;
     z-index: 1;
     padding: 0 1rem;
-    font-size: clamp(var(--size-sm), 5vw, var(--size-base));
+    font-size: clamp(var(--size-base), 5vw, 2rem);
     text-align: center;
+    line-height: 1.5;
   }
 </style>
