--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -187,6 +187,7 @@ import Layout from '../layouts/Layout.astro'
     max-width: 350px;
     margin: 0 auto;
     padding: 1.5rem;
+    border-radius: var(--border-radius-image);
     background-color: var(--color-secondary);
     box-shadow: 1rem 1rem 4rem var(--color-grey-shadow);
   }
