--- a/src/components/layout/navigation/Mobile.astro
+++ b/src/components/layout/navigation/Mobile.astro
@@ -157,14 +157,14 @@ import { Icon } from 'astro-icon/components'
 </style>
 
 <script>
-  const body = document.querySelector('body')
+  const html = document.querySelector('html')
   const hamburger = document.getElementById('hamburger')
   const navItems = document.querySelectorAll('.mobile-nav-overlay li')
   let overlayDisplayed = false
 
   function handleMobileNavigationOnClick() {
     overlayDisplayed = !overlayDisplayed
-    body?.setAttribute('data-overlay-displayed', `${overlayDisplayed}`)
+    html?.setAttribute('data-overlay-displayed', `${overlayDisplayed}`)
     hamburger?.classList.toggle('active')
     hamburger?.setAttribute('aria-expanded', `${overlayDisplayed}`)
   }
@@ -172,7 +172,7 @@ import { Icon } from 'astro-icon/components'
   function handleMobileNavigationOnResize() {
     if (window.innerWidth >= 768) {
       overlayDisplayed = false
-      body?.setAttribute('data-overlay-displayed', `${overlayDisplayed}`)
+      html?.setAttribute('data-overlay-displayed', `${overlayDisplayed}`)
       hamburger?.classList.remove('active')
       hamburger?.setAttribute('aria-expanded', `${overlayDisplayed}`)
     }
@@ -180,13 +180,13 @@ import { Icon } from 'astro-icon/components'
 
   function closeMobileNavOverlay() {
     overlayDisplayed = false
-    body?.setAttribute('data-overlay-displayed', `${overlayDisplayed}`)
+    html?.setAttribute('data-overlay-displayed', `${overlayDisplayed}`)
     hamburger?.classList.remove('active')
     hamburger?.setAttribute('aria-expanded', `${overlayDisplayed}`)
   }
 
   // Accessibility
-  body?.addEventListener('keyup', (event) => {
+  html?.addEventListener('keyup', (event) => {
     if (event.code === 'Escape' && overlayDisplayed) {
       handleMobileNavigationOnClick()
     }
