--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const socialImageURL = new URL('/sprouted-rye.png', canonicalURL)
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" data-overlay-displayed="false">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -78,7 +78,7 @@ const socialImageURL = new URL('/sprouted-rye.png', canonicalURL)
     <meta name="theme-color" content="#f0f9ff" />
   </head>
 
-  <body data-overlay-displayed="false">
+  <body>
     <Splash />
     <header>
       <Navigation />
