refactor(app): sourcing + images

--- a/src/components/ui/FlashingImages.astro
+++ b/src/components/ui/FlashingImages.astro
@@ -1,12 +1,12 @@
 ---
 // TODO: Make this component reusable by passing in the images as props
 import { Picture } from 'astro:assets'
-import sydMakingDoughOne from '../../assets/syd-making-dough-one.jpg'
-import sydMakingDoughTwo from '../../assets/syd-making-dough-two.jpg'
-import rawDoughOne from '../../assets/raw-dough-one.jpg'
-import rawDoughTwo from '../../assets/raw-dough-two.jpg'
-import sydOne from '../../assets/syd-one.jpg'
-import sydTwo from '../../assets/syd-two.jpg'
+import sydMakingDoughOne from '../../assets/syd-making-dough-1.jpg'
+import sydMakingDoughTwo from '../../assets/syd-making-dough-2.jpg'
+import rawDoughOne from '../../assets/raw-dough-1.jpg'
+import rawDoughTwo from '../../assets/raw-dough-2.jpg'
+import sydOne from '../../assets/syd-1.jpg'
+import sydTwo from '../../assets/syd-2.jpg'
 ---
 
 <div class="flashing-images lsa no-repeat">
