--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,7 @@
   --color-primary-light: #fff4f4;
   --color-secondary: #f0f9ff;
   --color-secondary-transparent: #f0f9ffe9;
+  --color-yellow-light: #fdfdf4;
   --color-blue: #0d9eff;
   --color-black: #252525;
   --color-white: #ffffff;
