feat(app): add LSA animations to 'sourcing' page, refactor

--- a/src/components/text/SectionHeader.astro
+++ b/src/components/text/SectionHeader.astro
@@ -8,7 +8,7 @@ export interface Props {
 const { title, description, class: className } = Astro.props
 ---
 
-<div class={`${className} header lsa no-repeat`}>
+<div class={`${className} header`}>
   <h2>{title}</h2>
   {description && <p>{description}</p>}
 </div>
