--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Layout from '../layouts/Layout.astro'
       <SectionHeader
         title="About Us"
         description="Born Yesterday is a small bakery in Western Maine making sourdough baked goods, with a focus on organic, local and whole grains. We see bread as a handmade product that is wildly crafted, using our hands, bodies and minds. A lot of cool 😎 fermentation goes on here and half of it is controlled by those hands and minds, but the other half is just food doing its thing. Hope you like us doing our thing and find something tasty here."
-        class="section-header-custom"
+        class="section-header-custom lsa no-repeat"
       />
       <FlashingImages />
       <Button text="Our Sourcing Story" isLink={true} href="/sourcing" class="button-custom" />
