--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,7 @@
   --color-grey: #858585;
   --color-grey-light: #e0e0e0;
   --color-grey-shadow: #8585851a;
+  --color-grey-dash: #85858540;
 
   --size-xxs: 0.75rem;
   --size-xs: 1rem;
